--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <section id="about" class="card">
       <h2><i class="fas fa-user"></i> Обо мне</h2>
       <p>
-        Привет! Меня зовут [Имя], я учусь в 10 классе и увлекаюсь программированием, 
+        Привет! Меня зовут [...], я учусь в 10 классе и увлекаюсь программированием, 
         дизайном, робототехникой и [ваши интересы]. Этот сайт — мой способ показать, 
         чему я научился, и поделиться своими идеями.
       </p>
